# DNSCewl

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  utilities.cpp  utilities.hpp
input_files/: target_list.txt
